# challengeup

./: .gitignore  Makefile  alembic.ini  docker-compose.yml  log_cfg.yaml  manage.py  pyproject.toml
.cursor/rules/: code-review.mdc  language.mdc  py.mdc
alembic/: env.py
alembic/versions/: 0001_init.py  0002_added_user_challenges_table.py  b1b645f6141c_dsa.py
app/models/: __init__.py  base.py  challenges.py  user.py  user_challenges.py  user_contacts.py
app/repositories/: repositories.py
app/services/: challenges_service.py  user_challenges_service.py  user_contacts_service.py  user_service.py
core/migrations/: alembic.py
core/repositories/: db.py  entity_db.py  query.py
core/starlette_ext/errors/: errors.py
core/types/: pydantic_base.py
core/utils/: __init__.py  types.py
core/web/: endpoint.py
core/web/endpoints/: base.py  json.py
core/web/endpoints/parsers/: base.py  json.py
core/web/openapi/: generator.py  setup.py  swagger_ui.html
core/web/parsers/: base.py
settings/: __init__.py  app.py  db.py  logs.py
telegram/: client.py
utils/migrations/: alembic.py
web/: create_app.py  initializers.py  routes.py
web/api/: __init__.py  challenges.py  schemas.py
web/api/challenges/: __init__.py  challenges.py  schemas.py
web/api/lifespans/: app_lifespans.py  db.py  lifespan.py
web/api/user_challenges/: __init__.py  user_challenges.py
web/api/user_contacts/: __init__.py  schemas.py  user_contacts.py
web/api/users/: __init__.py  schemas.py  users.py
web/lifespans/: app_lifespans.py  db.py  lifespan.py
web/mixins/: challenges_mixin.py  challenges_service_mixin.py  user_contacts_service_mixin.py  user_service_mixin.py
