[project]
name = "challengeup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.47.0",
    "uvicorn>=0.34.3",
    "uvloop>=0.21.0",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
ignore = ["F401"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
